# Raymes

./: .gitignore  README.md  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
SuperCmd-main/.github/: FUNDING.yml
SuperCmd-main/docs/: extension-install-flow.md
SuperCmd-main/scripts/: build-parakeet.mjs  build-soulver-calculator.mjs
SuperCmd-main/src/main/: ai-provider.ts  bun-manager.ts  extension-api.ts  main.ts  soulver-calculator.ts
native/axhelper/: axhelper  build.sh  main.swift
native/input/: Cargo.toml  build-universal.sh
native/input/src/: lib.rs
src/main/: better-sqlite3.d.ts  bridge.ts  center-overlay.ts  extension-registry.ts  extension-runner.ts  index.ts  ipc.ts  router.test.ts  router.ts  windowBounds.ts  windowState.ts
src/main/agent/: bridge.ts  (+3 more)
src/preload/: api.ts  index.ts
src/renderer/: AgentChatView.tsx  App.tsx  ClipboardView.tsx  CommandBar.tsx  CurrencySettings.tsx  EmojiPickerView.tsx  ExtensionRuntimeView.tsx  ExtensionsView.tsx  NotesView.tsx  OpenPortsView.tsx  PermissionsView.tsx  ProvidersView.tsx  SettingsView.tsx  SnippetsView.tsx  calculator.ts  escapeGate.ts  index.html  main.tsx  styles.css  vite-env.d.ts
src/shared/: agent.ts  aiChatSurface.ts  chat.ts  clipboard.ts  extensionRuntime.ts  extensions.ts  intent.ts  ipc.ts  llmConfig.ts  nativeCommands.ts  permissions.ts  portManager.ts  quickNotes.ts  safety.ts  search.ts  snippetEvents.ts  snippets.ts  voice.ts
tests/: bridge-test.ts
(+98 files in other folders)
