[package]
name = "hermes_input"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["highsierra"] }
image = { version = "0.25", default-features = false, features = ["png"] }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
